# embed-dart-vm-ng

./: .cproject  .gitignore  .project  BUILD  CMakeLists.txt  Makefile  README.md  main.cpp
src/: BUILD  embeddedvm.cpp  embeddedvm.h  main.cpp
